Release Waypointer 1.8.7